# TaskAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  auth.py  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
middleware/: cors.py  log_events.py  log_middleware.py  rate_limiter.py
routers/: admin.py  tasks.py  users.py
schemas/: tasks.py  users.py
utils/: notification.py
